--- a/mix-manifest.json
+++ b/mix-manifest.json
@@ -1,4 +1,5 @@
 {
     "/src/Assets/js/app.js": "/src/Assets/js/app.js",
-    "/src/Assets/styles/app.css": "/src/Assets/styles/app.css"
+    "/src/Assets/styles/app.css": "/src/Assets/styles/app.css",
+    "/src/Assets/js/app.js.map": "/src/Assets/js/app.js.map"
 }
